small style change to fix label size on budget add form. This will get overhauled soon but just changing for now to look better on mobile view

--- a/src/app/budget/budget-add/budget-add.component.scss
+++ b/src/app/budget/budget-add/budget-add.component.scss
@@ -10,8 +10,11 @@
 
 .form-array-container {
     display: grid;
-    grid-template-columns: 1fr .5fr;
-    grid-gap: 5px;
+    grid-template-columns: 1fr 1fr;
+
+    label {
+        font-size: .8rem;
+    }
 }
 
 .button-group-container {
